welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=0) {setCouleurBrosse(Color.lightGray) ;}
    ^Runner:5: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=1) {setCouleurBrosse(Color.blue);}
    ^Runner:6: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=2) {setCouleurBrosse(Color.cyan);}
    ^Runner:7: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=3) {setCouleurBrosse(Color.green);}
    ^Runner:8: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=4) {setCouleurBrosse(Color.yellow);}
    ^Runner:9: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=5) {setCouleurBrosse(Color.orange);}
    ^Runner:10: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=6) {setCouleurBrosse(Color.red);}
    ^Runner:11: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=7) {setCouleurBrosse(Color.magenta);}
    ^Runner:12: error: type mismatch;
 found   : Unit
 required: Boolean
if(x=8) {setCouleurBrosse(Color.pink);}
    ^